# sensecap-public-transport-CH

./: .gitignore  BOOT_LOOP_FIX.md  BOTTLENECK_SOLUTION.md  CHANGELOG_WIFI_SYSINFO.md  CMakeLists.txt  COMPILATION_CHECKLIST.md  FINAL_FLOW_SOLUTION.md  GATE_LOGIC_FIX.md  GLOBAL_RATE_LIMITER.md  GRAIN_COUNT_SOLUTION.md  IMPLEMENTATION.md  LAZY_INIT_POMODORO.md  POMODORO_ARCHITECTURE.md  POMODORO_INTEGRATION.md  POMODORO_QUICK_START.md  POMODORO_SUMMARY.md  POMODORO_TEST_EXAMPLE.c  POMODORO_USER_FLOW.md  README.md  README_POMODORO.md  SAND_SPEED_CALIBRATION.md  SLOW_FLOW_CONCEPT.md  STACK_OVERFLOW_FIX.md  STRICT_FLOW_CONTROL.md  UI_INTEGRATION_EXAMPLE.c  WIFI_MULTI_NETWORK.md  idf_component.yml  sdkconfig.defaults
components/bsp/src/peripherals/: bsp_lcd.c
main/: CMakeLists.txt  arimo_10.c  arimo_12.c  arimo_14.c  arimo_16.c  arimo_18.c  arimo_20.c  arimo_22.c  arimo_24.c  arimo_28.c  arimo_bold_14.c  arimo_bold_16.c  arimo_bold_18.c  arimo_bold_20.c  config.h  lv_conf.h  lv_port.c  main.c  sbb_clock.c  sbb_clock.h  view_data.h
main/controller/: indicator_controller.c  indicator_controller.h
main/model/: indicator_city.c  indicator_display.c  indicator_display.h  indicator_model.c  indicator_time.c  indicator_time.h  indicator_transport.c  indicator_transport.h  indicator_wifi.c  indicator_wifi.h  network_manager.c  network_manager.h  transport_data.c  transport_data.h
main/view/: indicator_pomodoro.c  indicator_pomodoro.h  indicator_view.c
